--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   image_picker: any
   path_provider: any
   path: any
+  permission_handler: any
+  image_gallery_saver: any
 
 
   # The following adds the Cupertino Icons font to your application.
