--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,14 @@ dependencies:
   permission_handler: any
   image_gallery_saver: any
   gallery_saver: any
+  video_player: any
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_camera: ^0.1.1
+  external_path: ^1.0.3
 
 
 
